--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -2,6 +2,7 @@
   <div style="padding-top: 5%; ">
     <!-- padding-bottom: 5%; -->
     <div class="container shadow-lg rounded pb-2 pt-2">
+      <div class="row d-flex pb-2"><i class="fa-solid fa-cart-shopping fa-4x" ><span style="font-size: 30%;" >cart</span></i></div>
         <table
           class="table table-fluid table-hover table-bordered mt-5 pt-2"
           id="myTable"
