--- a/views/users/404.ejs
+++ b/views/users/404.ejs
@@ -14,6 +14,9 @@
       <div class="col">
         <h1 class="text-center text-danger display-1">404 ERROR</h1>
       </div>
+      <div class="col text-center">
+        <a href="/" class="btn btn-outline-secondary">Go to home</a>
+      </div>
     </div>
   </div>
 </section>
