--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -13,7 +13,7 @@
               <th scope="col" style="text-align: center">No</th>
               <th scope="col" style="text-align: center">Item</th>
               <th scope="col" style="text-align: center">Title</th>
-              <th scope="col" style="text-align: center">Price</th>
+              <th scope="col" style="text-align: center">Price /unit</th>
               <th scope="col" style="text-align: center">Quantity</th>
               <th scope="col" style="text-align: center">Remove</th>
             </tr>
