--- a/views/users/wishlist.ejs
+++ b/views/users/wishlist.ejs
@@ -1,7 +1,7 @@
 <section class="page-fill" style="background-color: #eaddbf">
     <div style="padding-top: 5%; padding-bottom: 5%;">
       <div class="container shadow-lg rounded pb-2 pt-2">
-        <div class="row d-flex pb-2"><i class="fa-solid fa-heart fa-4x" ><span style="font-size: 23%;" >wishlist</span></i></div>
+        <div class="row d-flex pb-2"><i class="fa-solid fa-heart fa-4x" ><span style="font-size: 23%;" >wish - list</span></i></div>
           <table
             class="table table-fluid table-hover table-bordered mt-5 pt-2"
             id="myTable"
