order placed successfully

--- a/views/users/placeOrder.ejs
+++ b/views/users/placeOrder.ejs
@@ -153,4 +153,5 @@
   });
 </script> -->
 
-<!-- witten in placeOrderValidation -->
+<!-- witten in placeOrderValidation.js -->
+<!-- all handling done inside placeOrderValidation.js -->
