order management pending

--- a/views/users/404.ejs
+++ b/views/users/404.ejs
@@ -4,15 +4,19 @@
     style="height: 100vh"
   >
     <div class="row d-flex flex-column">
-      <div class="col d-flex justify-content-center">
+      <div class="col d-flex justify-content-center"></div>
+      <div class="col text-center">
         <img
-          class="w-75 h-75"
+          class="w-25 h-25"
           src="/users/images/logos/EXPO-store-black.png"
           alt="Expo-store"
         />
-      </div>
-      <div class="col">
-        <h1 class="text-center text-danger display-1">404 ERROR</h1>
+        <h1 class="text-center text-danger display-1" style="font-size: 400px">
+          <b>404!</b>
+        </h1>
+        <h6 class="text-center">
+          We cannot find the page you are looking for.
+        </h6>
       </div>
       <div class="col text-center">
         <a href="/" class="btn btn-outline-secondary">Go to home</a>
