--- a/views/partials/userHeader.ejs
+++ b/views/partials/userHeader.ejs
@@ -49,7 +49,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Orders</a>
+            <a class="nav-link" href="/orders">Orders</a>
           </li>
           <% } %>
           <li class="nav-item">
