order management ongoing

--- a/views/admin/viewProducts.ejs
+++ b/views/admin/viewProducts.ejs
@@ -1,7 +1,12 @@
 <section>
   <div class="container shadow-lg rounded mb-5">
     <div class="row mt-4">
-      <div class="d-flex flex-row-reverse">
+      <div class="d-flex justify-content-between mt-1">
+        <div>
+          <i class="fa-solid fa-shirt fa-4x"
+            ><span style="font-size: 30%" class="ps-1">Products</span></i
+          >
+        </div>
         <div>
           <a href="/admin/add-product" class="btn btn-outline-success m-3"
             >Add Product</a
