--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -30,7 +30,7 @@
             <a class="nav-link" href="/admin/view-category">Categories</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Orders</a>
+            <a class="nav-link" href="/admin/orders">Orders</a>
           </li>
         </ul>
         <div class="dropdown me-2">
