--- a/views/admin/viewUsers.ejs
+++ b/views/admin/viewUsers.ejs
@@ -1,6 +1,14 @@
-<section class="pt-5">
+<section class="page-fill" class="pt-5">
   <div class="container shadow-lg rounded mb-5">
-    <div class="pb-3"></div>
+    <div class="row mt-4">
+      <div class="d-flex justify-content-between mt-1 mb-1">
+        <div>
+          <i class="fa-solid fa-users fa-4x"
+            ><span style="font-size: 30%" class="ps-1">Users</span></i
+          >
+        </div>
+      </div>
+    </div>
     <table
       class="table table-fluid table-hover table-bordered pt-3"
       id="myTable"
