--- a/views/admin/viewOrders.ejs
+++ b/views/admin/viewOrders.ejs
@@ -1,4 +1,4 @@
-<section>
+<section class="page-fill">
   <div style="padding-top: 5%">
     <!-- padding-bottom: 5%; -->
     <div class="container shadow-lg rounded pb-2 pt-2">
@@ -50,6 +50,8 @@
                   <span id="<%=order._id%>"><%=order.status %></span>
                 </button>
                 <ul class="dropdown-menu">
+                  <% if(order.status!="Delivered") {%> <% if (order.status !==
+                  "Shipped"&&order.status !== "Delivered"){%>
                   <li>
                     <button
                       class="dropdown-item"
@@ -66,6 +68,7 @@
                       Shipped
                     </button>
                   </li>
+                  <% } %>
                   <li>
                     <button
                       class="dropdown-item"
@@ -74,6 +77,7 @@
                       Delivered
                     </button>
                   </li>
+                  <% } %>
                 </ul>
               </div>
             </td>
@@ -121,6 +125,12 @@
               `Status has been updated to "${status}"`,
               "success"
             );
+            const timeOut = setTimeout(reloadPage, 1200);
+
+            function reloadPage() {
+              location.reload();
+              clearTimeout(timeOut);
+            }
           },
         });
       }
