--- a/views/users/orderProducts.ejs
+++ b/views/users/orderProducts.ejs
@@ -7,7 +7,13 @@
         <div class="col"><h4>OrderId : <%=order._id %></div>
         <div class="col text-end">
           <div>
-            <button class="btn btn-outline-danger" onclick="cancelOrder('<%=order._id %>')">Cancel Order</button>
+            <% if (order.status!= "Cancelled"&&order.status!="Shipped"&&order.status!="Delivered") { %> 
+              <% if (order.status == "Cancel requested"||order.status == "Cancelled") {%>
+                <button class="btn btn-outline-danger"><%=order.status  %> </button>
+                <% } else {%> 
+              <button class="btn btn-outline-danger" id="cancel" onclick="cancelOrder('<%=order._id %>')">Cancel Order</button>
+              <% } %> 
+              <% } %>
           </div>
         </div>
         <div class="pb-2"></div>
@@ -61,6 +67,16 @@
 <script>
   function cancelOrder(orderId){
     console.log(orderId)
+    Swal.fire({
+  title: 'Are you sure?',
+  text: `Do you want to cancel the order with OrderId : ${orderId}`,
+  icon: 'warning',
+  showCancelButton: true,
+  confirmButtonColor: '#3085d6',
+  cancelButtonColor: '#d33',
+  confirmButtonText: 'Yes!'
+}).then((result) => {
+  if (result.isConfirmed) {
     $.ajax({
       url:'/cancelOrder',
       data:{
@@ -68,9 +84,15 @@
       },
       method:"post",
       success:(response)=>{
-
+        document.getElementById("cancel").innerHTML = "Cancel requested";
+        Swal.fire(
+      'Request send!',
+      'Wait for confirmation',
+      'success'
+    )
       }
     })
-    
+  }
+})
   }
 </script>
