stock increase and decrease

--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -46,8 +46,8 @@
           <label for="" class="mt-2">Description</label>
           <input type="text" name="Description" class="form-control" />
 
-          <label for="" class="mt-2">Quantity</label>
-          <input type="number" name="Quantity" class="form-control" />
+          <label for="" class="mt-2">Stock</label>
+          <input type="number" name="Stock" class="form-control" />
 
           <!-- <label for="" class="mt-2">Image</label>
           <input type="file" name="Image" class="form-control" multiple /> -->
