--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -54,12 +54,12 @@
             value="<%=product.Description%>"
           />
 
-          <label for="" class="mt-2">Quantity</label>
+          <label for="" class="mt-2">Stock</label>
           <input
-            type="text"
-            name="Quantity"
+            type="number"
+            name="Stock"
             class="form-control"
-            value="<%=product.Quantity%>"
+            value="<%=product.Stock%>"
           />
 
           <% const id1 = product._id %> <% const id2 = product._id+"a" %> <%
