--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -1,7 +1,7 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand px-5" href="#"
+      <a class="navbar-brand px-5" href="/admin"
         ><h3><b>EXPO</b>store-admin</h3></a
       >
       <button
@@ -31,6 +31,15 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/admin/orders">Orders</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/requests"
+              >Requests<span
+              class="badge bg-secondary zindex-offcanvas"
+              id="request-count"
+              ><%= locals.reqNo  %> </span
+            ></i
+            ></a>
           </li>
         </ul>
         <div class="dropdown me-2">
