--- a/views/layouts/expoStoreLayout.ejs
+++ b/views/layouts/expoStoreLayout.ejs
@@ -38,12 +38,18 @@
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- datatable -->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css"
+    /> -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css"
     />
-
-    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/buttons/2.3.2/css/buttons.dataTables.min.css"
+    />
 
     <!-- chart -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -65,6 +71,26 @@
     <%-include("../partials/userHeader") %> <% } %> <%- body %>
     <!-- <div style="height: 25px" class="bg-primary"></div> -->
     <% if((!locals.admin)){ %> <%-include("../partials/userFooter") %> <% } %>
+
+    <!-- Data tables -->
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
+    <!-- <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script> -->
+    <script src="https://cdn.datatables.net/buttons/2.3.2/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.3.2/js/buttons.html5.min.js"></script>
+
+    <script>
+      $(document).ready(function () {
+        $("#pdfTable").DataTable({
+          dom: "Bfrtip",
+          buttons: ["copyHtml5", "excelHtml5", "csvHtml5", "pdfHtml5"],
+        });
+      });
+    </script>
+
     <script>
       $(document).ready(function () {
         $("#myTable").DataTable();
