--- a/views/layouts/expoStoreLayout.ejs
+++ b/views/layouts/expoStoreLayout.ejs
@@ -59,6 +59,14 @@
         min-height: 100vh;
       }
 
+      .card-work:hover {
+        transform: scale(1.1);
+      }
+
+      .card-work {
+        transition: all 0.5s ease;
+      }
+
       #footer {
         bottom: 0;
         width: 100%;
