--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -9,7 +9,9 @@
           >
             <div class="card-body">
               <h5 class="card-title">Total Revenue</h5>
-              <p class="card-text text-center" style="font-size: 2rem">4000₹</p>
+              <p class="card-text text-center" style="font-size: 2rem">
+                <%=totalRevenue %> ₹
+              </p>
             </div>
           </div>
           <div
@@ -19,7 +21,9 @@
           >
             <div class="card-body">
               <h5 class="card-title">Total Orders</h5>
-              <p class="card-text text-center" style="font-size: 2rem">300</p>
+              <p class="card-text text-center" style="font-size: 2rem">
+                <%=totalOrders %>
+              </p>
             </div>
           </div>
           <div
@@ -28,7 +32,9 @@
           >
             <div class="card-body">
               <h5 class="card-title">Total Users</h5>
-              <p class="card-text text-center" style="font-size: 2rem">234</p>
+              <p class="card-text text-center" style="font-size: 2rem">
+                <%=totalUsers %>
+              </p>
             </div>
           </div>
         </div>
