--- a/views/admin/viewOrders.ejs
+++ b/views/admin/viewOrders.ejs
@@ -36,7 +36,7 @@
               <%=order.deliveryDetails.pincode %>, ph:
               <%=order.deliveryDetails.mobile %>
             </td>
-            <td><%=order.totalAmount %> ₹</td>
+            <td>₹ <%=order.totalAmount %></td>
             <td><%=order.paymentMethod %></td>
             <td>
               <a
