--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -81,7 +81,7 @@
       confirmButtonText: "Yes, remove it!",
     }).then((result) => {
       if (result.isConfirmed) {
-        Swal.fire("Deleted!", ` Product has been removed`, "success");
+        // Swal.fire("Deleted!", ` Product has been removed`, "success");
         // const timeOut = setTimeout(reloadPage, 1200);
 
         //     function reloadPage() {
