--- a/views/admin/viewProducts.ejs
+++ b/views/admin/viewProducts.ejs
@@ -24,6 +24,7 @@
           <th scope="col" style="text-align: center">No</th>
           <th scope="col" style="text-align: center">Title</th>
           <th scope="col" style="text-align: center">Price</th>
+          <th scope="col" style="text-align: center">Stock</th>
           <th scope="col" style="text-align: center">Category</th>
           <th scope="col" style="text-align: center">Sub Category</th>
           <th scope="col" style="text-align: center">Description</th>
@@ -38,6 +39,7 @@
           <th scope="row"><%=No++ %></th>
           <td><%=product.Name %></td>
           <td>₹ <%=product.Price %></td>
+          <td><%=product.Stock %></td>
           <td><%=product.Category %></td>
           <td><%=product.Subcategory %></td>
           <td><%=product.Description %></td>
